Fix page overflow on plugins page

--- a/custom.css
+++ b/custom.css
@@ -78,6 +78,9 @@
         overflow-x: auto;
         display: block;
     }
+
+    span.status.vhshift {
+        margin-right: 0;
     }
 }
 
